--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:recyclerview-v7:24.1.1'
     compile 'me.dm7.barcodescanner:zxing:1.8.4'
     // retrofit, gson
     compile 'com.google.code.gson:gson:2.6.2'
