--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+
     compile 'cn.pedant.sweetalert:library:1.3'
 }
