--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,5 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
 
     compile 'cn.pedant.sweetalert:library:1.3'
+    compile 'com.facebook.fresco:fresco:1.8.0'
 }
