--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,5 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
 
     implementation 'cn.pedant.sweetalert:library:1.3'
+    implementation 'com.facebook.fresco:fresco:1.11.0'
 }
