--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.jakewharton.hugo'
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion '28.0.3'
+    compileSdkVersion Integer.parseInt(ANDROID_COMPILE_SDK_VERSION)
+    buildToolsVersion ANDROID_BUILD_TOOLS_VERSION
     flavorDimensions "default"
     defaultConfig {
         applicationId "com.iceoton.durable"
-        minSdkVersion 21
-        targetSdkVersion 28
+        minSdkVersion Integer.parseInt(project.ANDROID_MIN_SDK)
+        targetSdkVersion Integer.parseInt(project.ANDROID_TARGET_SDK_VERSION)
         versionCode 1
         versionName "0.0.1"
     }
@@ -21,7 +21,7 @@ android {
 
     productFlavors {
         dev {
-            minSdkVersion 15
+            minSdkVersion Integer.parseInt(project.ANDROID_MIN_SDK)
             buildConfigField "boolean", "LOG", "true"
             buildConfigField "String", "BUNDLE_CODE", "\"dsads-pi-0000\""
         }
@@ -67,6 +67,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
 
-    implementation 'cn.pedant.sweetalert:library:1.3'
+    implementation project(':sweet-alert-dialog')
     implementation 'com.facebook.fresco:fresco:1.11.0'
 }
